--- a/movie-recommender-system.ipynb
+++ b/movie-recommender-system.ipynb
@@ -1930,7 +1930,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Predator\\AppData\\Local\\Temp\\ipykernel_20356\\3089450492.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Predator\\AppData\\Local\\Temp\\ipykernel_14276\\3089450492.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2037,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 38,
    "id": "024f98d3",
    "metadata": {},
    "outputs": [
@@ -2046,40 +2046,12 @@
      "output_type": "stream",
      "text": [
       "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
-      "Collecting nltk\n",
-      "  Obtaining dependency information for nltk from https://files.pythonhosted.org/packages/a6/0a/0d20d2c0f16be91b9fa32a77b76c60f9baf6eba419e5ef5deca17af9c582/nltk-3.8.1-py3-none-any.whl.metadata\n",
-      "  Downloading nltk-3.8.1-py3-none-any.whl.metadata (2.8 kB)\n",
-      "Collecting click (from nltk)\n",
-      "  Obtaining dependency information for click from https://files.pythonhosted.org/packages/00/2e/d53fa4befbf2cfa713304affc7ca780ce4fc1fd8710527771b58311a3229/click-8.1.7-py3-none-any.whl.metadata\n",
-      "  Downloading click-8.1.7-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Requirement already satisfied: nltk in c:\\users\\predator\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (3.8.1)\n",
+      "Requirement already satisfied: click in c:\\users\\predator\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from nltk) (8.1.7)\n",
       "Requirement already satisfied: joblib in c:\\users\\predator\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from nltk) (1.3.2)\n",
-      "Collecting regex>=2021.8.3 (from nltk)\n",
-      "  Obtaining dependency information for regex>=2021.8.3 from https://files.pythonhosted.org/packages/b3/d0/1a054b685849b018cff594ccd4859fc6a3132f67698da805ed06d5b6974a/regex-2024.4.16-cp311-cp311-win_amd64.whl.metadata\n",
-      "  Downloading regex-2024.4.16-cp311-cp311-win_amd64.whl.metadata (41 kB)\n",
-      "     ---------------------------------------- 0.0/42.0 kB ? eta -:--:--\n",
-      "     ----------------------------- ---------- 30.7/42.0 kB 1.3 MB/s eta 0:00:01\n",
-      "     -------------------------------------- 42.0/42.0 kB 511.8 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\predator\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from nltk) (2024.4.16)\n",
       "Requirement already satisfied: tqdm in c:\\users\\predator\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from nltk) (4.66.1)\n",
       "Requirement already satisfied: colorama in c:\\users\\predator\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from click->nltk) (0.4.6)\n",
-      "Downloading nltk-3.8.1-py3-none-any.whl (1.5 MB)\n",
-      "   ---------------------------------------- 0.0/1.5 MB ? eta -:--:--\n",
-      "   - -------------------------------------- 0.1/1.5 MB 1.6 MB/s eta 0:00:01\n",
-      "   -- ------------------------------------- 0.1/1.5 MB 1.0 MB/s eta 0:00:02\n",
-      "   ----- ---------------------------------- 0.2/1.5 MB 1.7 MB/s eta 0:00:01\n",
-      "   ------- -------------------------------- 0.3/1.5 MB 1.5 MB/s eta 0:00:01\n",
-      "   ------------ --------------------------- 0.5/1.5 MB 2.3 MB/s eta 0:00:01\n",
-      "   ------------- -------------------------- 0.5/1.5 MB 2.0 MB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 1.0/1.5 MB 3.3 MB/s eta 0:00:01\n",
-      "   ----------------------------- ---------- 1.1/1.5 MB 3.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 1.5/1.5 MB 3.8 MB/s eta 0:00:00\n",
-      "Downloading regex-2024.4.16-cp311-cp311-win_amd64.whl (268 kB)\n",
-      "   ---------------------------------------- 0.0/268.9 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 268.9/268.9 kB ? eta 0:00:00\n",
-      "Downloading click-8.1.7-py3-none-any.whl (97 kB)\n",
-      "   ---------------------------------------- 0.0/97.9 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 97.9/97.9 kB ? eta 0:00:00\n",
-      "Installing collected packages: regex, click, nltk\n",
-      "Successfully installed click-8.1.7 nltk-3.8.1 regex-2024.4.16\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -2099,7 +2071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "id": "ab4a5b80",
    "metadata": {},
    "outputs": [],
@@ -2109,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 40,
    "id": "e789b5d8",
    "metadata": {},
    "outputs": [],
@@ -2120,7 +2092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 41,
    "id": "b091e473",
    "metadata": {},
    "outputs": [],
@@ -2137,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 42,
    "id": "665a432e",
    "metadata": {},
    "outputs": [
@@ -2145,7 +2117,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Predator\\AppData\\Local\\Temp\\ipykernel_20356\\3213734980.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Predator\\AppData\\Local\\Temp\\ipykernel_14276\\3213734980.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2160,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 43,
    "id": "470ce6b7",
    "metadata": {},
    "outputs": [
@@ -2170,7 +2142,7 @@
        "'in the 22nd century, a parapleg marin is dispatch to the moon pandora on a uniqu mission, but becom torn between follow order and protect an alien civilization. action adventur fantasi sciencefict cultureclash futur spacewar spacecoloni societi spacetravel futurist romanc space alien tribe alienplanet cgi marin soldier battl loveaffair antiwar powerrel mindandsoul 3d samworthington zoesaldana sigourneyweav jamescameron'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2181,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 44,
    "id": "83b108ce",
    "metadata": {},
    "outputs": [
@@ -2189,7 +2161,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Predator\\AppData\\Local\\Temp\\ipykernel_20356\\3214958533.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Predator\\AppData\\Local\\Temp\\ipykernel_14276\\3214958533.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2204,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 45,
    "id": "7df5b385",
    "metadata": {},
    "outputs": [
@@ -2285,7 +2257,7 @@
        "4  john carter is a war-weary, former militari ca...  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2296,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 46,
    "id": "a126a26e",
    "metadata": {},
    "outputs": [
@@ -2306,7 +2278,7 @@
        "'in the 22nd century, a parapleg marin is dispatch to the moon pandora on a uniqu mission, but becom torn between follow order and protect an alien civilization. action adventur fantasi sciencefict cultureclash futur spacewar spacecoloni societi spacetravel futurist romanc space alien tribe alienplanet cgi marin soldier battl loveaffair antiwar powerrel mindandsoul 3d samworthington zoesaldana sigourneyweav jamescameron'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2317,17 +2289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 47,
    "id": "d77f4b5d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"captain barbossa, long believ to be dead, ha come back to life and is head to the edg of the earth with will turner and elizabeth swann. but noth is quit as it seems. adventur fantasi action ocean drugabu exoticisland eastindiatradingcompani loveofone'slif traitor shipwreck strongwoman ship allianc calypso afterlif fighter pirat swashbuckl aftercreditsst johnnydepp orlandobloom keiraknightley goreverbinski\""
+       "\"captain barbossa, long believ to be dead, ha come back to life and is head to the edg of the earth with will turner and elizabeth swann. but noth is quit as it seems. adventur fantasi action ocean drugabus exoticisland eastindiatradingcompani loveofone'slif traitor shipwreck strongwoman ship allianc calypso afterlif fighter pirat swashbuckl aftercreditssting johnnydepp orlandobloom keiraknightley goreverbinski\""
       ]
      },
-     "execution_count": 74,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2338,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 48,
    "id": "9cbdf4c8",
    "metadata": {},
    "outputs": [],
@@ -2349,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 49,
    "id": "4ba451cf",
    "metadata": {},
    "outputs": [],
@@ -2359,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 50,
    "id": "813e93ad",
    "metadata": {},
    "outputs": [
@@ -2375,7 +2347,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2386,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 51,
    "id": "8fec632a",
    "metadata": {},
    "outputs": [
@@ -2396,7 +2368,7 @@
        "array([0, 0, 0, ..., 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2407,7 +2379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 52,
    "id": "c8f65c66",
    "metadata": {},
    "outputs": [
@@ -2418,7 +2390,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2429,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 53,
    "id": "641bc9d6",
    "metadata": {},
    "outputs": [
@@ -2439,7 +2411,7 @@
        "['love', '']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2451,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 54,
    "id": "b959e98d",
    "metadata": {},
    "outputs": [
@@ -2461,7 +2433,7 @@
        "'danc'"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2472,7 +2444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 55,
    "id": "432e1c7f",
    "metadata": {},
    "outputs": [
@@ -2482,7 +2454,7 @@
        "'in the 22nd century, a parapleg marin is dispatch to the moon pandora on a uniqu mission, but becom torn between follow order and protect an alien civilization. action adventur fantasi sciencefict cultureclash futur spacewar spacecoloni societi spacetravel futurist romanc space alien tribe alienplanet cgi marin soldier battl loveaffair antiwar powerrel mindandsoul 3d samworthington zoesaldana sigourneyweav jamescameron'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2493,8 +2465,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "2fc9640f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b996cf2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Predator\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\extmath.py:193: RuntimeWarning: invalid value encountered in matmul\n",
+      "  ret = a @ b\n"
+     ]
+    }
+   ],
+   "source": [
+    "similarity = cosine_similarity(vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "2e395a8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1216, 0.28676966733820225),\n",
+       " (2409, 0.26901379342448517),\n",
+       " (3730, 0.2605130246476754),\n",
+       " (507, 0.255608593705383),\n",
+       " (539, 0.25038669783359574)]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(list(enumerate(similarity[0])),reverse=True,key=lambda x:x[1])[1:6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "210904ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend(movie):\n",
+    "    movie_index = new_df[new_df['title'] == movie].index[0]\n",
+    "    distances = similarity[movie_index]\n",
+    "    movies_list = sorted(list(enumerate(distances)),reverse=True,key=lambda x:x[1])[1:6]\n",
+    "    \n",
+    "    for i in movies_list:\n",
+    "        print(new_df.iloc[i[0]].title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "125e4633",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Dark Knight\n",
+      "Batman\n",
+      "Batman\n",
+      "The Dark Knight Rises\n",
+      "10th & Wolf\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend('Batman Begins')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "56104825",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Aliens vs Predator: Requiem'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df.iloc[1216].title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "13c913de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "41f5c148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(new_df,open('movies.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "8a85f6b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Avatar', \"Pirates of the Caribbean: At World's End\", 'Spectre',\n",
+       "       ..., 'Signed, Sealed, Delivered', 'Shanghai Calling',\n",
+       "       'My Date with Drew'], dtype=object)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df['title'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "4076b09b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(new_df.to_dict(),open('movie_dict.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "71a2653e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(similarity,open('similarity.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cad0b02",
    "metadata": {},
    "outputs": [],
    "source": []
